--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <i>Current Position:</i>
 <ul>
     <li><pre>
-Leading specialist, department of industrial control systems security 
+ICS security team lead, Kaspersky Lab
 </pre></li>
     
     </ul>
@@ -84,7 +84,7 @@ Leading specialist, department of industrial control systems security
 <td valign="top">
     <i>Alerts | Advisories | CVE:</i>
     <ul>
-        <li><per> [ public disclosure ] </per></li>
+        <li><per> [ responsible disclosure ] </per></li>
         <li><per> Siemens SIMATIC STEP 7 TIA Portal Vulnerabilities | https://ics-cert.us-cert.gov/advisories/ICSA-15-048-01 </per></li>
         <li><per> Siemens SIMATIC S7-1200 Vulnerabilities | https://ics-cert.us-cert.gov/advisories/ICSA-14-079-02 </per></li>
         <li><per> Siemens SIMATIC S7-1500 CPU Firmware Vulnerabilities | https://ics-cert.us-cert.gov/advisories/ICSA-14-073-01 </per></li>
